# VDF-based-PoVD

./: Attack.py  Environment.py  README.md  chain.py  cli.py  core.py  external.py  global_var.py  main.py  miner.py  system_config.ini
fig-powertest/: README.md  pyproject.toml  test_log.csv
fig-powertest/examples/: mining_demo_config.json  run_mining_example.py
fig-powertest/pic/power_slices_new_format/: replot_power_data_120s_loop10_20260321_004153_1min.eps  replot_power_data_120s_loop10_20260321_004153_2min.eps  replot_power_data_120s_loop10_20260321_004153_30s.eps  replot_power_data_120s_loop1_20260320_161622_1min.eps  replot_power_data_120s_loop1_20260320_161622_2min.eps  replot_power_data_120s_loop1_20260320_161622_30s.eps  replot_power_data_120s_loop1_20260320_170624_1min.eps  replot_power_data_120s_loop1_20260320_170624_2min.eps  (+31 more)
fig-powertest/povd_platform/: __init__.py  compare.py  crypto.py  mining_demo_config.json  mining_parameter_study.py  run.md  run.py  run_mining_example.py  settings.py
fig-powertest/povd_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fig-powertest/results/: power_data_120s_loop10_20260321_004153.json  power_data_120s_loop1_20260323_185450.json  power_data_120s_loop2_20260323_193209.json  power_data_120s_loop3_20260323_200929.json  power_data_120s_loop4_20260323_204649.json  power_data_120s_loop5_20260323_212408.json  power_data_120s_loop6_20260323_220127.json  power_data_120s_loop7_20260320_224953.json  power_data_120s_loop8_20260320_232713.json  power_data_120s_loop9_20260321_000433.json
(+8649 files in other folders)
